--- a/view/root/point_mng_give.html
+++ b/view/root/point_mng_give.html
@@ -111,6 +111,9 @@
 						<li ><a href="sales_mng.html">
 							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
 						</li>
+						<li ><a href="review_mng.html">
+							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
+						</li>
 						<li ><a href="#">
 							<i class="fa fa-power-off"></i> <span>로그아웃</span></a>
 						</li>
@@ -174,32 +177,32 @@
 						<div class="list_table">
 							<table id="user_list" class="table table-bordered table-striped">
 							<thead>
-								<th><input type="checkbox"></th>
+								<th><input type="checkbox" id="all_select"></th>
 								<th>일반사용자 ID(이메일)</th>
 								<th>이름</th>
 								<th>휴대폰 번호</th>
 							</thead>
 							<tbody>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">grand123@gmail.com</a></td>
 									<td>홍길동</td>
 									<td>010-1234-5006</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">machani@naver.com</a></td>
 									<td>고길동</td>
 									<td>010-1597-1561</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">granma1233@gmail.com</a></td>
 									<td>정길동</td>
 									<td>010-4989-8452</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">grand1253@gmail.com</a></td>
 									<td>최길동</td>
 									<td>010-8525-4888</td>
