--- a/view/root/review_mng.html
+++ b/view/root/review_mng.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="../../resources/template/bower_components/Ionicons/css/ionicons.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
-		<link rel="stylesheet" href="../../resources/common/css/style_board.css">
+		<link rel="stylesheet" href="../../resources/common/css/style_review.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -95,7 +95,7 @@
 								<i class="fa fa-link"></i> <span>세트만들기</span></a>
 							</li> 
 						-->
-						<li class="active treeview">
+						<li class="treeview">
 							<a href="#"><i class="fa fa-list"></i> <span>통합게시판</span>
 								<span class="pull-right-container">
 									<i class="fa fa-angle-left pull-right"></i>
@@ -110,7 +110,7 @@
 						<li ><a href="sales_mng.html">
 							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
 						</li>
-						<li ><a href="review_mng.html">
+						<li class="active"><a href="review_mng.html">
 							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
 						</li>
 						<li ><a href="#">
@@ -127,8 +127,7 @@
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
 					<h4>
-						<i class="fa fa-list"></i> &nbsp;통합게시판
-						<small>> 공지사항</small>
+						<i class="fa fa-commenting-o"></i> &nbsp;후기관리
 					</h4>
 				</section>
 
