--- a/view/root/board_question.html
+++ b/view/root/board_question.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="../../resources/template/bower_components/Ionicons/css/ionicons.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
+		<link rel="stylesheet" href="../../resources/common/css/style_board.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -109,6 +110,9 @@
 						<li ><a href="sales_mng.html">
 							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
 						</li>
+						<li ><a href="review_mng.html">
+							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
+						</li>
 						<li ><a href="#">
 							<i class="fa fa-power-off"></i> <span>로그아웃</span></a>
 						</li>
@@ -130,11 +134,9 @@
 
 				<!-- Main content -->
 				<section class="content container-fluid">
-
-				<!--------------------------
-				| Your Page Content Here |
-				-------------------------->
-
+					<div class="content container-fluid area">
+						<p style="font-size:50pt">준비중 입니다.</p>
+					</div>
 				</section>
 				<!-- /.content -->
 			</div>
