--- a/view/root/point_mng_give_bd.html
+++ b/view/root/point_mng_give_bd.html
@@ -112,6 +112,9 @@
 						<li ><a href="sales_mng.html">
 							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
 						</li>
+						<li ><a href="review_mng.html">
+							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
+						</li>
 						<li ><a href="#">
 							<i class="fa fa-power-off"></i> <span>로그아웃</span></a>
 						</li>
@@ -136,7 +139,7 @@
 					<div class="content container-fluid area">
 						<table id="point_list" class="table table-bordered table-striped">
 							<thead>
-								<th><input type="checkbox"></th>
+								<th><input type="checkbox" id="all_select"></th>
 								<th>일반사용자 ID(이메일)</th>
 								<th>이름</th>
 								<th>포인트 명</th>
@@ -145,7 +148,7 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">gyoil0126@gmail.com</a></td>
 									<td>구교일</td>
 									<td>마찬할매의용돈</td>
@@ -153,7 +156,7 @@
 									<td>2017-07-07</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">gilgil0126@gmail.com</a></td>
 									<td>홍길동</td>
 									<td>마찬할매의용돈</td>
