--- a/view/root/user_mng_cus.html
+++ b/view/root/user_mng_cus.html
@@ -111,6 +111,9 @@
 						<li ><a href="sales_mng.html">
 							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
 						</li>
+						<li ><a href="review_mng.html">
+							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
+						</li>
 						<li ><a href="#">
 							<i class="fa fa-power-off"></i> <span>로그아웃</span></a>
 						</li>
@@ -135,7 +138,7 @@
 					<div class="content container-fluid area">
 						<table id="user_list" class="table table-bordered table-striped">
 							<thead>
-								<th><input type="checkbox"></th>
+								<th><input type="checkbox" id="all_select"></th>
 								<th>일반사용자 ID(이메일)</th>
 								<th>가입일</th>
 								<th>마지막 접속일</th>
@@ -146,7 +149,7 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">grand1@naver.com</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -156,7 +159,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">grand2chan@gmail.com</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -166,7 +169,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">grand1ch@hanmail.net</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -176,7 +179,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">grand345@naver.com</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -186,7 +189,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">chan12312@naver.com</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -196,7 +199,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">machan@kpu.ac.kr</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -206,7 +209,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">grand21@gmail.com</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -216,7 +219,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">gransa1@naver.com</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -226,7 +229,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">grand158@kpu.ac.kr</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -236,7 +239,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">1grand1@naver.com</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
@@ -246,7 +249,7 @@
 									<td>10</td>
 								</tr>
 								<tr>
-									<td><input type="checkbox"></td>
+									<td><input type="checkbox" name="one_select"></td>
 									<td><a data-toggle="modal" href="#modal-default2">2grandma1@naver.com</a></td>
 									<td>2016-01-01</td>
 									<td>2016-12-31</td>
