--- a/view/user/index.html
+++ b/view/user/index.html
@@ -3,16 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Dashboard - Administrator</title>
+		<title>Dashboard - Licensee</title>
 		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/font-awesome/css/font-awesome.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/Ionicons/css/ionicons.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/datatables.net-bs/css/dataTables.bootstrap.css">
-		<link rel="stylesheet" href="../../resources/template/bower_components/select2/dist/css/select2.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
-		<link rel="stylesheet" href="../../resources/common/css/style_info.css">
+		<link rel="stylesheet" href="../../resources/common/css/style_info_lic.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -30,7 +29,7 @@
 				<a href="index.html" class="logo">
 					<!-- 좌측 메뉴 최소화 시켰을 경우의 로고 크기 : 50x50 pixels -->
 					<span class="logo-mini"><img src="../../resources/common/img/logo_grandmachan_s.png"></span>
-					<span class="logo-lg"><img src="../../resources/common/img/logo_grandmachan_l.png"></span>
+					<span class="logo-lg"><img src="../../resources/common/img/logo_grandmachan_l_lic.png"></span>
 				</a>
 
 				<!-- Header Navbar -->
@@ -54,7 +53,7 @@
 						-->
 						<div class="pull-left info">
 							<!-- 사용자 이름 -->
-							<b>Administrator</b> 님
+							<b>맘스찬방</b> 님
 						</div>
 					</div>
 
@@ -65,55 +64,56 @@
 						<li class="active"><a href="index.html">
 							<i class="fa fa-line-chart"></i> <span>통합정보</span></a>
 						</li>
-						<li class="treeview">
-							<a href="#"><i class="fa fa-users"></i> <span>회원관리</span>
-								<span class="pull-right-container">
-									<i class="fa fa-angle-left pull-right"></i>
-								</span>
-							</a>
-							<ul class="treeview-menu">
-								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
-								<li><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
-							</ul>
+						<li><a href="store_info.html">
+							<i class="fa fa-home"></i> <span>매장등록정보</span></a>
 						</li>
-						<li class="treeview">
-							<a href="#"><i class="fa fa-krw"></i> <span>포인트관리</span>
-								<span class="pull-right-container">
-									<i class="fa fa-angle-left pull-right"></i>
-								</span>
-							</a>
-							<ul class="treeview-menu">
-								<li><a href="point_mng_list.html"><i class="fa fa-circle-o"></i>포인트목록</a></li>
-								<li><a href="point_mng_give.html"><i class="fa fa-circle-o"></i>포인트지급</a></li>
-								<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>포인트지급내역</a></li>
-							</ul>
+						<li><a href="item_list.html">
+							<i class="fa fa-gift"></i> <span>상품목록</span></a>
 						</li>
-						<li ><a href="item_mng.html">
-							<i class="fa fa-gift"></i> <span>상품추가하기</span></a>
-						</li>
-						<!-- 	추후  업데이트 예정				
-							<li ><a href="#">
-								<i class="fa fa-link"></i> <span>세트만들기</span></a>
-							</li> 
+						<!-- 	추후 활성화 예정
+							<li class="treeview">
+								<a href="#"><i class="fa fa-users"></i> <span>세트목록</span>
+							</li>
 						-->
 						<li class="treeview">
-							<a href="#"><i class="fa fa-list"></i> <span>통합게시판</span>
+							<a href="#"><i class="fa fa-gift"></i> <span>상품등록하기</span>
 								<span class="pull-right-container">
 									<i class="fa fa-angle-left pull-right"></i>
 								</span>
 							</a>
 							<ul class="treeview-menu">
-								<li><a href="board_notice.html"><i class="fa fa-circle-o"></i>공지사항</a></li>
-								<li><a href="board_question.html"><i class="fa fa-circle-o"></i>자주하는질문</a></li>
-
+								<li><a href="item_bd.html"><i class="fa fa-circle-o"></i>상품등록내역 확인하기</a></li>
+								<li><a href="item_reg.html"><i class="fa fa-circle-o"></i>일반 상품 등록하기</a></li>
+								<!-- 	추후 활성화 예정
+									<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>세트용 상품 등록하기</a></li>
+								-->
 							</ul>
 						</li>
-						<li ><a href="sales_mng.html">
-							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
+						<li ><a href="pay_info.html">
+							<i class="fa fa-krw"></i> <span>결재정보</span></a>
 						</li>
-						<li ><a href="review_mng.html">
-							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
+						<li class="treeview">
+							<a href="#"><i class="fa fa-truck"></i> <span>주문정보</span>
+								<span class="pull-right-container">
+									<i class="fa fa-angle-left pull-right"></i>
+								</span>
+							</a>
+							<ul class="treeview-menu">
+								<li><a href="order_bd.html"><i class="fa fa-circle-o"></i>주문내역</a></li>
+								<li><a href="order_count.html"><i class="fa fa-circle-o"></i>주문수량</a></li>
+								<!-- 	추후 활성화 예정
+									<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>세트용 상품 등록하기</a></li>
+								-->
+							</ul>
+						</li>
+						<li ><a href="set_holiday.html">
+							<i class="fa fa-calendar-check-o"></i> <span>휴일설정하기</span></a>
+						</li>
+						<li ><a href="cus_review.html">
+							<i class="fa fa-list"></i> <span>고객후기</span></a>
+						</li>
+						<li ><a href="sales_bd.html">
+							<i class="fa fa-inbox"></i> <span>매출내역</span></a>
 						</li>
 						<li ><a href="#">
 							<i class="fa fa-power-off"></i> <span>로그아웃</span></a>
@@ -137,20 +137,7 @@
 				<section class="content container-fluid">
 					<div class="content container-fluid area_state">
 						<div class="box-header with-border">
-							<div style="vertical-align:center;float:left;margin-top:5px;">
-								<b>매출현황</b>
-							</div>
-							<div class="select_box">
-								<select class="form-control select2" style="width: 100%;">
-									<option selected="selected">전체(사업자선택)</option>
-									<option>사업자 1</option>
-									<option>사업자 2</option>
-									<option>사업자 3</option>
-									<option>사업자 4</option>
-									<option>사업자 5</option>
-									<option>사업자 6</option>
-								</select>
-							</div>
+							<b>매출현황</b>
 						</div>
 						<div class="table">
 							<div class="table_sub">
@@ -284,97 +271,6 @@
 							</table>
 						</div>
 					</div>
-					<div class="content container-fluid area_best">
-						<div class="box-header with-border">
-							<b>BEST 우수고객 10</b>
-						</div>
-						<div class="best_table">
-							<table class="table table-bordered table-striped">
-								<thead>
-									<tr>
-										<th>순위</th>
-										<th>이메일</th>
-										<th>연락처</th>
-										<th>총 구매금액</th>
-										<th>총 구매횟수</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>1</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>2</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>3</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>4</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>5</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>6</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>7</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>8</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>9</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-									<tr>
-										<td>10</td>
-										<td>grandma1@gmail.com</td>
-										<td>010-1234-5678</td>
-										<td>70000</td>
-										<td>9</td>
-									</tr>
-								</tbody>
-								</tfoot>
-							</table>
-						</div>
-					</div>
 				</section>
 				<!-- /.content -->
 			</div>
@@ -401,16 +297,9 @@
 		<script src="../../resources/template/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<!-- AdminLTE App -->
 		<script src="../../resources/template/dist/js/adminlte.min.js"></script>
-		<!-- Select2 -->
-		<script src="../../resources/template/bower_components/select2/dist/js/select2.full.js"></script>
 		<!-- ChartJS -->
 		<script src="../../resources/template/bower_components/Chart.js/Chart.js"></script>
 		<script>
-			// Select2를 사용하기 위한 함수 정의
-			$( function(){
-				$('.select2').select2()
-			})
-
 			// ChartJS를 사용하기 위한 함수 정의
 			$(function() {
 				// Chart Data Sample
