--- a/view/user/item_list.html
+++ b/view/user/item_list.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Dashboard - Administrator</title>
+		<title>Dashboard - Licensee</title>
 		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/font-awesome/css/font-awesome.css">
@@ -12,8 +12,7 @@
 		<link rel="stylesheet" href="../../resources/template/bower_components/datatables.net-bs/css/dataTables.bootstrap.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
-		<link rel="stylesheet" href="../../resources/common/css/style_item.css">
-		<link rel="stylesheet" href="../../resources/template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+		<link rel="stylesheet" href="../../resources/common/css/style_item_lic.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -31,7 +30,7 @@
 				<a href="index.html" class="logo">
 					<!-- 좌측 메뉴 최소화 시켰을 경우의 로고 크기 : 50x50 pixels -->
 					<span class="logo-mini"><img src="../../resources/common/img/logo_grandmachan_s.png"></span>
-					<span class="logo-lg"><img src="../../resources/common/img/logo_grandmachan_l.png"></span>
+					<span class="logo-lg"><img src="../../resources/common/img/logo_grandmachan_l_lic.png"></span>
 				</a>
 
 				<!-- Header Navbar -->
@@ -55,7 +54,7 @@
 						-->
 						<div class="pull-left info">
 							<!-- 사용자 이름 -->
-							<b>Administrator</b> 님
+							<b>맘스찬방</b> 님
 						</div>
 					</div>
 
@@ -66,55 +65,56 @@
 						<li><a href="index.html">
 							<i class="fa fa-line-chart"></i> <span>통합정보</span></a>
 						</li>
-						<li class="treeview">
-							<a href="#"><i class="fa fa-users"></i> <span>회원관리</span>
-								<span class="pull-right-container">
-									<i class="fa fa-angle-left pull-right"></i>
-								</span>
-							</a>
-							<ul class="treeview-menu">
-								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
-								<li><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
-							</ul>
+						<li><a href="store_info.html">
+							<i class="fa fa-home"></i> <span>매장등록정보</span></a>
 						</li>
-						<li class="treeview">
-							<a href="#"><i class="fa fa-krw"></i> <span>포인트관리</span>
-								<span class="pull-right-container">
-									<i class="fa fa-angle-left pull-right"></i>
-								</span>
-							</a>
-							<ul class="treeview-menu">
-								<li><a href="point_mng_list.html"><i class="fa fa-circle-o"></i>포인트목록</a></li>
-								<li><a href="point_mng_give.html"><i class="fa fa-circle-o"></i>포인트지급</a></li>
-								<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>포인트지급내역</a></li>
-							</ul>
+						<li class="active"><a href="item_list.html">
+							<i class="fa fa-gift"></i> <span>상품목록</span></a>
 						</li>
-						<li  class="active"><a href="item_mng.html">
-							<i class="fa fa-gift"></i> <span>상품추가하기</span></a>
-						</li>
-						<!-- 	추후  업데이트 예정				
-							<li ><a href="#">
-								<i class="fa fa-link"></i> <span>세트만들기</span></a>
-							</li> 
+						<!-- 	추후 활성화 예정
+							<li class="treeview">
+								<a href="#"><i class="fa fa-users"></i> <span>세트목록</span>
+							</li>
 						-->
 						<li class="treeview">
-							<a href="#"><i class="fa fa-list"></i> <span>통합게시판</span>
+							<a href="#"><i class="fa fa-gift"></i> <span>상품등록하기</span>
 								<span class="pull-right-container">
 									<i class="fa fa-angle-left pull-right"></i>
 								</span>
 							</a>
 							<ul class="treeview-menu">
-								<li><a href="board_notice.html"><i class="fa fa-circle-o"></i>공지사항</a></li>
-								<li><a href="board_question.html"><i class="fa fa-circle-o"></i>자주하는질문</a></li>
-
+								<li><a href="item_bd.html"><i class="fa fa-circle-o"></i>상품등록내역 확인하기</a></li>
+								<li><a href="item_reg.html"><i class="fa fa-circle-o"></i>일반 상품 등록하기</a></li>
+								<!-- 	추후 활성화 예정
+									<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>세트용 상품 등록하기</a></li>
+								-->
 							</ul>
 						</li>
-						<li ><a href="sales_mng.html">
-							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
+						<li ><a href="pay_info.html">
+							<i class="fa fa-krw"></i> <span>결재정보</span></a>
 						</li>
-						<li ><a href="review_mng.html">
-							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
+						<li class="treeview">
+							<a href="#"><i class="fa fa-truck"></i> <span>주문정보</span>
+								<span class="pull-right-container">
+									<i class="fa fa-angle-left pull-right"></i>
+								</span>
+							</a>
+							<ul class="treeview-menu">
+								<li><a href="order_bd.html"><i class="fa fa-circle-o"></i>주문내역</a></li>
+								<li><a href="order_count.html"><i class="fa fa-circle-o"></i>주문수량</a></li>
+								<!-- 	추후 활성화 예정
+									<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>세트용 상품 등록하기</a></li>
+								-->
+							</ul>
+						</li>
+						<li ><a href="set_holiday.html">
+							<i class="fa fa-calendar-check-o"></i> <span>휴일설정하기</span></a>
+						</li>
+						<li ><a href="cus_review.html">
+							<i class="fa fa-list"></i> <span>고객후기</span></a>
+						</li>
+						<li ><a href="sales_bd.html">
+							<i class="fa fa-inbox"></i> <span>매출내역</span></a>
 						</li>
 						<li ><a href="#">
 							<i class="fa fa-power-off"></i> <span>로그아웃</span></a>
@@ -130,7 +130,7 @@
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
 					<h4>
-						<i class="fa fa-gift"></i> &nbsp;상품추가하기
+						<i class="fa fa-gift"></i> &nbsp;상품목록
 					</h4>
 				</section>
 
@@ -168,7 +168,7 @@
 										<td>비빔오징어젓갈</td>
 										<td>200g</td>
 										<td>3,000원</td>
-										<td>뭘 선택하라는 거죠???</td>
+										<td><button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal-default">상세보기</button></td>
 									</tr>
 								</tbody>
 							</table>
@@ -179,7 +179,6 @@
 			</div>
 			<!-- /.content-wrapper -->
 
-			<!-- Modal (상품추가) -->
 			<div class="modal fade" id="modal-default">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -268,7 +267,7 @@
 							</div>
 							<div class="modal-footer">
 								<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
-								<button type="button" class="btn btn-primary">확인</button>
+								<button type="button" class="btn btn-primary">추가</button>
 							</div>
 						</form>
 					</div>
@@ -276,7 +275,6 @@
 				</div>
 				<!-- /.modal-dialog -->
 			</div>
-			<!-- /.modal -->
 
 			<!--Footer -->
 			<footer class="main-footer">
@@ -304,10 +302,7 @@
 		<!-- Datatables.js -->
 		<script src="../../resources/template/bower_components/datatables.net/js/jquery.dataTables.js"></script>
 		<script src="../../resources/template/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
-		<script src="../../resources/common/js/table_item.js"></script>
-		<!-- Bootstrap3-wisihtml5 -->
-		<script src="../../resources/template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
-		<script src="../../resources/common/js/plugin_item.js"></script>
+		<script src="../../resources/common/js/table_item_lic.js"></script>
 		<!-- Optionally, you can add Slimscroll and FastClick plugins.
 		Both of these plugins are recommended to enhance the
 		user experience. -->
