--- a/view/user/pay_info.html
+++ b/view/user/pay_info.html
@@ -3,14 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Dashboard - Administrator</title>
+		<title>Dashboard - Licensee</title>
 		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/font-awesome/css/font-awesome.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/Ionicons/css/ionicons.css">
+		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap-daterangepicker/daterangepicker.css">
+		<link rel="stylesheet" href="../../resources/template/bower_components/datatables.net-bs/css/dataTables.bootstrap.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
-		<link rel="stylesheet" href="../../resources/common/css/style_board.css">
+		<link rel="stylesheet" href="../../resources/common/css/style_pay_lic.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -28,7 +30,7 @@
 				<a href="index.html" class="logo">
 					<!-- 좌측 메뉴 최소화 시켰을 경우의 로고 크기 : 50x50 pixels -->
 					<span class="logo-mini"><img src="../../resources/common/img/logo_grandmachan_s.png"></span>
-					<span class="logo-lg"><img src="../../resources/common/img/logo_grandmachan_l.png"></span>
+					<span class="logo-lg"><img src="../../resources/common/img/logo_grandmachan_l_lic.png"></span>
 				</a>
 
 				<!-- Header Navbar -->
@@ -52,7 +54,7 @@
 						-->
 						<div class="pull-left info">
 							<!-- 사용자 이름 -->
-							<b>Administrator</b> 님
+							<b>맘스찬방</b> 님
 						</div>
 					</div>
 
@@ -63,55 +65,56 @@
 						<li><a href="index.html">
 							<i class="fa fa-line-chart"></i> <span>통합정보</span></a>
 						</li>
-						<li class="treeview">
-							<a href="#"><i class="fa fa-users"></i> <span>회원관리</span>
-								<span class="pull-right-container">
-									<i class="fa fa-angle-left pull-right"></i>
-								</span>
-							</a>
-							<ul class="treeview-menu">
-								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
-								<li><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
-							</ul>
+						<li><a href="store_info.html">
+							<i class="fa fa-home"></i> <span>매장등록정보</span></a>
 						</li>
-						<li class="treeview">
-							<a href="#"><i class="fa fa-krw"></i> <span>포인트관리</span>
-								<span class="pull-right-container">
-									<i class="fa fa-angle-left pull-right"></i>
-								</span>
-							</a>
-							<ul class="treeview-menu">
-								<li><a href="point_mng_list.html"><i class="fa fa-circle-o"></i>포인트목록</a></li>
-								<li><a href="point_mng_give.html"><i class="fa fa-circle-o"></i>포인트지급</a></li>
-								<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>포인트지급내역</a></li>
-							</ul>
+						<li><a href="item_list.html">
+							<i class="fa fa-gift"></i> <span>상품목록</span></a>
 						</li>
-						<li ><a href="item_mng.html">
-							<i class="fa fa-gift"></i> <span>상품추가하기</span></a>
-						</li>
-						<!-- 	추후  업데이트 예정				
-							<li ><a href="#">
-								<i class="fa fa-link"></i> <span>세트만들기</span></a>
-							</li> 
+						<!-- 	추후 활성화 예정
+							<li class="treeview">
+								<a href="#"><i class="fa fa-users"></i> <span>세트목록</span>
+							</li>
 						-->
-						<li class="active treeview">
-							<a href="#"><i class="fa fa-list"></i> <span>통합게시판</span>
+						<li class="treeview">
+							<a href="#"><i class="fa fa-gift"></i> <span>상품등록하기</span>
 								<span class="pull-right-container">
 									<i class="fa fa-angle-left pull-right"></i>
 								</span>
 							</a>
 							<ul class="treeview-menu">
-								<li class="active"><a href="board_notice.html"><i class="fa fa-circle-o"></i>공지사항</a></li>
-								<li><a href="board_question.html"><i class="fa fa-circle-o"></i>자주하는질문</a></li>
-
+								<li><a href="item_bd.html"><i class="fa fa-circle-o"></i>상품등록내역 확인하기</a></li>
+								<li><a href="item_reg.html"><i class="fa fa-circle-o"></i>일반 상품 등록하기</a></li>
+								<!-- 	추후 활성화 예정
+									<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>세트용 상품 등록하기</a></li>
+								-->
 							</ul>
 						</li>
-						<li ><a href="sales_mng.html">
-							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
+						<li class="active"><a href="pay_info.html">
+							<i class="fa fa-krw"></i> <span>결재정보</span></a>
 						</li>
-						<li ><a href="review_mng.html">
-							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
+						<li class="treeview">
+							<a href="#"><i class="fa fa-truck"></i> <span>주문정보</span>
+								<span class="pull-right-container">
+									<i class="fa fa-angle-left pull-right"></i>
+								</span>
+							</a>
+							<ul class="treeview-menu">
+								<li><a href="order_bd.html"><i class="fa fa-circle-o"></i>주문내역</a></li>
+								<li><a href="order_count.html"><i class="fa fa-circle-o"></i>주문수량</a></li>
+								<!-- 	추후 활성화 예정
+									<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>세트용 상품 등록하기</a></li>
+								-->
+							</ul>
+						</li>
+						<li><a href="set_holiday.html">
+							<i class="fa fa-calendar-check-o"></i> <span>휴일설정하기</span></a>
+						</li>
+						<li><a href="cus_review.html">
+							<i class="fa fa-list"></i> <span>고객후기</span></a>
+						</li>
+						<li ><a href="sales_bd.html">
+							<i class="fa fa-inbox"></i> <span>매출내역</span></a>
 						</li>
 						<li ><a href="#">
 							<i class="fa fa-power-off"></i> <span>로그아웃</span></a>
@@ -127,15 +130,54 @@
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
 					<h4>
-						<i class="fa fa-list"></i> &nbsp;통합게시판
-						<small>> 공지사항</small>
+						<i class="fa fa-krw"></i> &nbsp;결제정보
 					</h4>
 				</section>
 
 				<!-- Main content -->
 				<section class="content container-fluid">
 					<div class="content container-fluid area">
-						<p style="font-size:50pt">준비중 입니다.</p>
+						<div class="pay_table">
+							<table id="pay_list" class="table table-bordered table-striped">
+								<thead>
+									<tr>
+										<th><input type="checkbox" id="all_select"></th>
+										<th>순번</th>
+										<th>결제상태</th>
+										<th>주문번호</th>
+										<th>결제방법</th>
+										<th>결제금액</th>
+										<th>주문자</th>
+										<th>결제일시</th>
+										<th>누적주문횟수</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td><input type="checkbox" name="one_select"></td>
+										<td>1</td>
+										<td><div class="pay_null"><strong>미결제</strong></div></td>
+										<td>MMZ12345678</td>
+										<td>신용/체크카드</td>
+										<td>29,500원</td>
+										<td>구교일</td>
+										<td>2017-05-14 16:00:32</td>
+										<td>1회</td>
+									</tr>
+									<tr>
+										<td><input type="checkbox" name="one_select"></td>
+										<td>2</td>
+										<td><div class="pay_finish"><strong>결제완료</strong></div></td>
+										<td>MMZ12345678</td>
+										<td>가상계좌</td>
+										<td>129,500원</td>
+										<td>이용희</td>
+										<td>2017-05-14 17:20:44</td>
+										<td>3회</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
 				</section>
 				<!-- /.content -->
@@ -163,7 +205,13 @@
 		<script src="../../resources/template/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<!-- AdminLTE App -->
 		<script src="../../resources/template/dist/js/adminlte.min.js"></script>
-
+		<!-- date-range-picker -->
+		<script src="../../resources/template/bower_components/moment/min/moment.min.js"></script>
+		<script src="../../resources/template/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+		<!-- DataTables -->
+		<script src="../../resources/template/bower_components/datatables.net/js/jquery.dataTables.js"></script>
+		<script src="../../resources/template/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
+		<script src="../../resources/common/js/table_pay_lic.js"></script>
 		<!-- Optionally, you can add Slimscroll and FastClick plugins.
 		Both of these plugins are recommended to enhance the
 		user experience. -->
