--- a/view/user/set_holiday.html
+++ b/view/user/set_holiday.html
@@ -3,17 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Dashboard - Administrator</title>
+		<title>Dashboard - Licensee</title>
 		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/font-awesome/css/font-awesome.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/Ionicons/css/ionicons.css">
-		<link rel="stylesheet" href="../../resources/template/bower_components/select2/dist/css/select2.css">
-		<link rel="stylesheet" href="../../resources/template/bower_components/datatables.net-bs/css/dataTables.bootstrap.css">
-		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap-daterangepicker/daterangepicker.css">
+		<link rel="stylesheet" href="../../resources/template/bower_components/fullcalendar/dist/fullcalendar.css">
+ 		<link rel="stylesheet" href="../../resources/template/bower_components/fullcalendar/dist/fullcalendar.print.css" media="print">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
-		<link rel="stylesheet" href="../../resources/common/css/style_sales.css">
+		<link rel="stylesheet" href="../../resources/common/css/style_holi_lic.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -31,7 +30,7 @@
 				<a href="index.html" class="logo">
 					<!-- 좌측 메뉴 최소화 시켰을 경우의 로고 크기 : 50x50 pixels -->
 					<span class="logo-mini"><img src="../../resources/common/img/logo_grandmachan_s.png"></span>
-					<span class="logo-lg"><img src="../../resources/common/img/logo_grandmachan_l.png"></span>
+					<span class="logo-lg"><img src="../../resources/common/img/logo_grandmachan_l_lic.png"></span>
 				</a>
 
 				<!-- Header Navbar -->
@@ -55,7 +54,7 @@
 						-->
 						<div class="pull-left info">
 							<!-- 사용자 이름 -->
-							<b>Administrator</b> 님
+							<b>맘스찬방</b> 님
 						</div>
 					</div>
 
@@ -66,55 +65,56 @@
 						<li><a href="index.html">
 							<i class="fa fa-line-chart"></i> <span>통합정보</span></a>
 						</li>
-						<li class="treeview">
-							<a href="#"><i class="fa fa-users"></i> <span>회원관리</span>
-								<span class="pull-right-container">
-									<i class="fa fa-angle-left pull-right"></i>
-								</span>
-							</a>
-							<ul class="treeview-menu">
-								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
-								<li><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
-							</ul>
+						<li><a href="store_info.html">
+							<i class="fa fa-home"></i> <span>매장등록정보</span></a>
 						</li>
-						<li class="treeview">
-							<a href="#"><i class="fa fa-krw"></i> <span>포인트관리</span>
-								<span class="pull-right-container">
-									<i class="fa fa-angle-left pull-right"></i>
-								</span>
-							</a>
-							<ul class="treeview-menu">
-								<li><a href="point_mng_list.html"><i class="fa fa-circle-o"></i>포인트목록</a></li>
-								<li><a href="point_mng_give.html"><i class="fa fa-circle-o"></i>포인트지급</a></li>
-								<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>포인트지급내역</a></li>
-							</ul>
+						<li><a href="item_list.html">
+							<i class="fa fa-gift"></i> <span>상품목록</span></a>
 						</li>
-						<li ><a href="item_mng.html">
-							<i class="fa fa-gift"></i> <span>상품추가하기</span></a>
-						</li>
-						<!-- 	추후  업데이트 예정				
-							<li ><a href="#">
-								<i class="fa fa-link"></i> <span>세트만들기</span></a>
-							</li> 
+						<!-- 	추후 활성화 예정
+							<li class="treeview">
+								<a href="#"><i class="fa fa-users"></i> <span>세트목록</span>
+							</li>
 						-->
 						<li class="treeview">
-							<a href="#"><i class="fa fa-list"></i> <span>통합게시판</span>
+							<a href="#"><i class="fa fa-gift"></i> <span>상품등록하기</span>
 								<span class="pull-right-container">
 									<i class="fa fa-angle-left pull-right"></i>
 								</span>
 							</a>
 							<ul class="treeview-menu">
-								<li><a href="board_notice.html"><i class="fa fa-circle-o"></i>공지사항</a></li>
-								<li><a href="board_question.html"><i class="fa fa-circle-o"></i>자주하는질문</a></li>
-
+								<li><a href="item_bd.html"><i class="fa fa-circle-o"></i>상품등록내역 확인하기</a></li>
+								<li><a href="item_reg.html"><i class="fa fa-circle-o"></i>일반 상품 등록하기</a></li>
+								<!-- 	추후 활성화 예정
+									<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>세트용 상품 등록하기</a></li>
+								-->
 							</ul>
 						</li>
-						<li class="active"><a href="sales_mng.html">
-							<i class="fa fa-inbox"></i> <span>매출관리</span></a>
+						<li ><a href="pay_info.html">
+							<i class="fa fa-krw"></i> <span>결재정보</span></a>
 						</li>
-						<li ><a href="review_mng.html">
-							<i class="fa fa-commenting-o"></i> <span>후기관리</span></a>
+						<li class="treeview">
+							<a href="#"><i class="fa fa-truck"></i> <span>주문정보</span>
+								<span class="pull-right-container">
+									<i class="fa fa-angle-left pull-right"></i>
+								</span>
+							</a>
+							<ul class="treeview-menu">
+								<li><a href="order_bd.html"><i class="fa fa-circle-o"></i>주문내역</a></li>
+								<li><a href="order_count.html"><i class="fa fa-circle-o"></i>주문수량</a></li>
+								<!-- 	추후 활성화 예정
+									<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>세트용 상품 등록하기</a></li>
+								-->
+							</ul>
+						</li>
+						<li class="active"><a href="set_holiday.html">
+							<i class="fa fa-calendar-check-o"></i> <span>휴일설정하기</span></a>
+						</li>
+						<li><a href="cus_review.html">
+							<i class="fa fa-list"></i> <span>고객후기</span></a>
+						</li>
+						<li ><a href="sales_bd.html">
+							<i class="fa fa-inbox"></i> <span>매출내역</span></a>
 						</li>
 						<li ><a href="#">
 							<i class="fa fa-power-off"></i> <span>로그아웃</span></a>
@@ -130,73 +130,14 @@
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
 					<h4>
-						<i class="fa fa-inbox"></i> &nbsp;매출관리
+						<i class="fa fa-calendar-check-o"></i> &nbsp;휴일설정하기
 					</h4>
 				</section>
 
 				<!-- Main content -->
 				<section class="content container-fluid">
 					<div class="content container-fluid area">
-						<table id="sales_list" class="table table-bordered table-striped">
-							<thead>
-								<th>사업자명</th>
-								<th>주문 횟수</th>
-								<th>상품 매출액</th>
-								<th>배송비</th>
-							</thead>
-							<tbody>
-								<tr>
-									<td>맘스찬방</td>
-									<td>87</td>
-									<td>2,401,200</td>
-									<td>261,000</td>
-								</tr>
-								<tr>
-									<td>맘스찬방</td>
-									<td>87</td>
-									<td>2,401,200</td>
-									<td>261,000</td>
-								</tr>
-								<tr>
-									<td>맘스찬방</td>
-									<td>87</td>
-									<td>2,401,200</td>
-									<td>261,000</td>
-								</tr>
-								<tr>
-									<td>맘스찬방</td>
-									<td>87</td>
-									<td>2,401,200</td>
-									<td>261,000</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					<div class="content container-fluid area">
-						<table id="calc_list" class="table table-bordered table-striped">
-							<thead>
-								<th>사업자명</th>
-								<th>주문 횟수</th>
-								<th>총 결재액</th>
-								<th>상품 매출액(+)</th>
-								<th>배송비(+)</th>
-								<th>할인금액(-)</th>
-								<th>판매 수수료</th>
-								<th>최종 정산액</th>
-							</thead>
-							<tbody>
-								<tr>
-									<td>맘스찬방</td>
-									<td>87</td>
-									<td>2,654,200</td>
-									<td>2,401,200</td>
-									<td>261,000</td>
-									<td>8,000</td>
-									<td>360,180</td>
-									<td>2,294,020</td>
-								</tr>
-							</tbody>
-						</table>
+						<div id="calendar"></div>
 					</div>
 				</section>
 				<!-- /.content -->
@@ -224,15 +165,70 @@
 		<script src="../../resources/template/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<!-- AdminLTE App -->
 		<script src="../../resources/template/dist/js/adminlte.min.js"></script>
-		<!-- Select2 -->
-		<script src="../../resources/template/bower_components/select2/dist/js/select2.full.js"></script>
-		<!-- DataTables -->
-		<script src="../../resources/template/bower_components/datatables.net/js/jquery.dataTables.js"></script>
-		<script src="../../resources/template/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
-		<!-- date-range-picker -->
+		<!-- full Calendar -->
 		<script src="../../resources/template/bower_components/moment/min/moment.min.js"></script>
-		<script src="../../resources/template/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
-		<script src="../../resources/common/js/table_sales.js"></script>
+		<script src="../../resources/template/bower_components/fullcalendar/dist/fullcalendar.js"></script>
+		<script src="../../resources/template/bower_components/fullcalendar/dist/locale/ko.js"></script>
+		<script>
+			$(function(){
+				// full calendar 관련 스크립트
+				var date = new Date()
+				var d    = date.getDate(),
+				m    = date.getMonth(),
+				y    = date.getFullYear()
+				$('#calendar').fullCalendar({
+					header    : {
+						left  : 'prev,next today',
+						center: 'title',
+						right : 'month,agendaWeek,agendaDay'
+						},
+					buttonText: {
+						today: '오늘',
+						month: '월',
+						week : '주',
+						day  : '일'
+					},
+					// 달력에 이벤트 표시
+					events    : [
+						{
+							title          : 'All Day Event',
+							start          : new Date(y, m, 1),
+							end 	   : new Date(y, m, d -5),
+							allDay	  : false,
+							backgroundColor: '#f56954', //red
+							borderColor    : '#f56954' //red
+						}
+					],
+					
+					editable  : true,
+					droppable : true, // this allows things to be dropped onto the calendar !!!
+					drop      : function (date, allDay) { // this function is called when something is dropped
+
+						// retrieve the dropped element's stored Event Object
+						var originalEventObject = $(this).data('eventObject')
+
+						// we need to copy it, so that multiple events don't have a reference to the same object
+						var copiedEventObject = $.extend({}, originalEventObject)
+
+						// assign it the date that was reported
+						copiedEventObject.start           = date
+						copiedEventObject.allDay          = allDay
+						copiedEventObject.backgroundColor = $(this).css('background-color')
+						copiedEventObject.borderColor     = $(this).css('border-color')
+
+						// render the event on the calendar
+						// the last `true` argument determines if the event "sticks" (http://arshaw.com/fullcalendar/docs/event_rendering/renderEvent/)
+						$('#calendar').fullCalendar('renderEvent', copiedEventObject, true)
+
+						// is the "remove after drop" checkbox checked?
+						if ($('#drop-remove').is(':checked')) {
+							// if so, remove the element from the "Draggable Events" list
+							$(this).remove()
+						}
+					}
+				})
+			})
+		</script>
 		<!-- Optionally, you can add Slimscroll and FastClick plugins.
 		Both of these plugins are recommended to enhance the
 		user experience. -->
