--- a/view/user/item_reg.html
+++ b/view/user/item_reg.html
@@ -249,10 +249,9 @@
 					// 달력에 이벤트 표시
 					events    : [
 						{
-							title          : 'All Day Event',
+							title          : '된장국 판매',
 							start          : new Date(y, m, 1),
-							end 	   : new Date(y, m, d -5),
-							allDay	  : false,
+							allDay	  : true,
 							backgroundColor: '#f56954', //red
 							borderColor    : '#f56954' //red
 						}
