--- a/view/root/board_question.html
+++ b/view/root/board_question.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/font-awesome/css/font-awesome.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/Ionicons/css/ionicons.css">
+		<link rel="stylesheet" href="../../resources/template/bower_components/datatables.net-bs/css/dataTables.bootstrap.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
 		<link rel="stylesheet" href="../../resources/common/css/style_board.css">
@@ -135,7 +136,34 @@
 				<!-- Main content -->
 				<section class="content container-fluid">
 					<div class="content container-fluid area">
-						<p style="font-size:50pt">준비중 입니다.</p>
+						<div class="table_area">
+							<table id="question_list" class="table table-bordered table-striped">
+								<thead>
+									<tr>
+										<th><input type="checkbox" id="all_select"></th>
+										<th>제목</th>
+										<th>작성자</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td><input type="checkbox" name="one_select"></td>
+										<td><a href="question_detail.html">선택한 날짜에 반찬이 도착하지 않았습니다.</a></td>
+										<td>Administrator</td>
+									</tr>
+									<tr>
+										<td><input type="checkbox" name="one_select"></td>
+										<td><a href="question_detail.html">지금 주문하면 언제오나요?</a></td>
+										<td>Administrator</td>
+									</tr>
+									<tr>
+										<td><input type="checkbox" name="one_select"></td>
+										<td><a href="question_detail.html">구매취소가 가능한가요?</a></td>
+										<td>Administrator</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
 				</section>
 				<!-- /.content -->
@@ -163,7 +191,10 @@
 		<script src="../../resources/template/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<!-- AdminLTE App -->
 		<script src="../../resources/template/dist/js/adminlte.min.js"></script>
-
+		<!-- Datatables.js -->
+		<script src="../../resources/template/bower_components/datatables.net/js/jquery.dataTables.js"></script>
+		<script src="../../resources/template/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
+		<script src="../../resources/common/js/table_question.js"></script>
 		<!-- Optionally, you can add Slimscroll and FastClick plugins.
 		Both of these plugins are recommended to enhance the
 		user experience. -->
