--- a/view/root/question_detail.html
+++ b/view/root/question_detail.html
@@ -9,10 +9,9 @@
 		<link rel="stylesheet" href="../../resources/template/bower_components/font-awesome/css/font-awesome.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/Ionicons/css/ionicons.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/select2/dist/css/select2.css">
-		<link rel="stylesheet" href="../../resources/template/bower_components/datatables.net-bs/css/dataTables.bootstrap.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
-		<link rel="stylesheet" href="../../resources/common/css/style_item.css">
+		<link rel="stylesheet" href="../../resources/common/css/style_form.css">
 		<link rel="stylesheet" href="../../resources/template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -90,7 +89,7 @@
 								<li><a href="point_mng_give_bd.html"><i class="fa fa-circle-o"></i>포인트지급내역</a></li>
 							</ul>
 						</li>
-						<li  class="active"><a href="item_mng.html">
+						<li ><a href="item_mng.html">
 							<i class="fa fa-gift"></i> <span>상품추가하기</span></a>
 						</li>
 						<!-- 	추후  업데이트 예정				
@@ -98,7 +97,7 @@
 								<i class="fa fa-link"></i> <span>세트만들기</span></a>
 							</li> 
 						-->
-						<li class="treeview">
+						<li class="active treeview">
 							<a href="#"><i class="fa fa-list"></i> <span>통합게시판</span>
 								<span class="pull-right-container">
 									<i class="fa fa-angle-left pull-right"></i>
@@ -106,7 +105,7 @@
 							</a>
 							<ul class="treeview-menu">
 								<li><a href="board_notice.html"><i class="fa fa-circle-o"></i>공지사항</a></li>
-								<li><a href="board_question.html"><i class="fa fa-circle-o"></i>자주하는질문</a></li>
+								<li class="active"><a href="board_question.html"><i class="fa fa-circle-o"></i>자주하는질문</a></li>
 
 							</ul>
 						</li>
@@ -130,150 +129,49 @@
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
 					<h4>
-						<i class="fa fa-gift"></i> &nbsp;상품추가하기
+						<i class="fa fa-list"></i> &nbsp;통합게시판
+						<small>> 자주하는질문</small>
 					</h4>
 				</section>
 
 				<!-- Main content -->
 				<section class="content container-fluid">
 					<div class="content container-fluid area">
-						<div class="menu_area">
-							<div class="menu_category box-header with-border">
-								<b>반찬 분류</b>
+						<div class="form_area">
+							<div class="form_title">
+								<h4>자주하는질문</h4>
 							</div>
-							<div class="menu_list">
-								<ul>
-									<li class="active"><a href="#">전체(35)</a></li>
-									<li><a href="#">국(2)</a></li>
-									<li><a href="#">메인반찬(4)</a></li>
-									<li><a href="#">일반반찬(28)</a></li>
-									<li><a href="#">기타(1)</a></li>
-								</ul>
+							<form id="notice_form" method="post">
+								<div class="form_section">
+									<p>글 제목</p>
+									<input type="text" id="notice_title" name="notice_title" class="form-control" disabled="disabled">
+								</div>
+								<div class="form_section">
+									<p>작성자</p>
+									<input type="text" id="notice_writer" name="notice_writer" class="form-control" disabled="disabled">
+								</div>
+								<div class="form_section">
+									<p>등록날짜</p>
+									<input type="text" id="notice_date" name="notice_date" class="form-control" disabled="disabled">
+								</div>
+								<div class="form_section">
+									<p>내용</p>
+									<div class="box-body pad">
+										질문에 대한 답변 표시
+									</div>
+								</div>
+							</form>
+							<div class="form_section">
+								<button type="button" id="modify" class="btn btn-warning">수정</button>
+								<button type="button" id="delete" class="btn btn-danger">삭제</button>
+								<button type="button" id="return" class="btn btn-primary">목록</button>
 							</div>
-						</div>
-						<div class="list_area">
-							<table id="menu_list" class="table table-bordered table-striped">
-								<thead>
-									<th><input type="checkbox" id="all_select"></th>
-									<th>대표 이미지</th>
-									<th>상품이름</th>
-									<th>중량</th>
-									<th>가격</th>
-								</thead>
-								<tbody>
-									<tr>
-										<td><input type="checkbox" name="one_select"></td>
-										<td><img src="../../resources/common/img/logo_grandmachan_s.png" style="width:50px;height:50px;"></td>
-										<td>비빔오징어젓갈</td>
-										<td>200g</td>
-										<td>3,000원</td>
-									</tr>
-								</tbody>
-							</table>
 						</div>
 					</div>
 				</section>
 				<!-- /.content -->
 			</div>
 			<!-- /.content-wrapper -->
-
-			<!-- Modal (상품추가) -->
-			<div class="modal fade" id="modal-default">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span></button>
-							<h4 class="modal-title">상품등록</h4>
-						</div>
-						<form action="#" method="post">
-							<div class="modal-body">
-								<div class="modal_content">
-									<div class="modal_side_area">
-										<div class="sub_title">
-											<b>상품설정</b>
-										</div>
-										<div class="item_set">
-											<div class="set_area">
-												<p>상품이름</p>
-												<input type="text" class="form_control" placeholder="상품이름">
-											</div>
-											<div class="set_area">
-												<p>판매가격</p>
-												<input type="text" class="form_control" placeholder="판매가격"><br>
-												<input type="checkbox" id="dc_check" class="form_control"> 할인가격<br>
-												<input type="text" id="dc_pay" class="form_control" placeholder="할인가격" disabled>
-											</div>
-											<div class="set_area">
-												<p>중량</p>
-												<input type="text" class="form_control" placeholder="중량(단위 : g)">
-											</div>
-											<div class="set_area">
-												<p>반찬 분류(카테고리)</p>
-												<select class="form-control select2" style="width: 100%;">
-													<option selected="selected">선택해주세요</option>
-													<option>국</option>
-													<option>메인반찬</option>
-													<option>일반반찬</option>
-													<option>기타</option>
-												</select>
-											</div>
-											<div class="set_area">
-												<p>세트 분류</p>
-												<select class="form-control select2" style="width: 100%;">
-													<option selected="selected">선택해주세요</option>
-													<option>세트 1</option>
-													<option>세트 2</option>
-													<option>세트 3</option>
-													<option>세트 4</option>
-													<option>세트 5</option>
-													<option>세트 6</option>
-												</select>
-											</div>
-											<div class="set_area">
-												<p>썸네일이미지(최대 3장)</p>
-												<div class="img_prev"></div>
-												<div class="upload">
-													<button class="upload_btn"></button>
-													<input type="file" id="upload_img" multiple>
-												</div>
-											</div>
-											<div class="set_area">
-												<p>이벤트 표시</p>
-												<select class="form-control select2" multiple="multiple" data-placeholder="선택해주세요" style="width: 100%;">
-													<option>이벤트 1</option>
-													<option>이벤트 2</option>
-													<option>이벤트 3</option>
-													<option>이벤트 4</option>
-												</select>
-											</div>
-										</div>
-									</div>
-									<div class="modal_area">
-										<div class="sub_title">
-											<b>상세설명</b>
-										</div>
-										<div class="item_editor">
-											<div class="box-body pad">
-												<form>
-													<textarea class="textarea" placeholder="자유롭게 작성하세요." style="width: 100%; height: 580px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
-												</form>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
-								<button type="button" class="btn btn-primary">확인</button>
-							</div>
-						</form>
-					</div>
-					<!-- /.modal-content -->
-				</div>
-				<!-- /.modal-dialog -->
-			</div>
-			<!-- /.modal -->
 
 			<!--Footer -->
 			<footer class="main-footer">
@@ -298,13 +196,25 @@
 		<script src="../../resources/template/dist/js/adminlte.min.js"></script>
 		<!-- Select2 -->
 		<script src="../../resources/template/bower_components/select2/dist/js/select2.full.js"></script>
-		<!-- Datatables.js -->
-		<script src="../../resources/template/bower_components/datatables.net/js/jquery.dataTables.js"></script>
-		<script src="../../resources/template/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
-		<script src="../../resources/common/js/table_item.js"></script>
 		<!-- Bootstrap3-wisihtml5 -->
 		<script src="../../resources/template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
 		<script src="../../resources/common/js/plugin_item.js"></script>
+		<script>
+			$(function(){
+				$('#modify').click(function(){
+					// servlet 작업해주세요.
+					$(location).attr('href','#');
+				})
+
+				$('#delete').click(function(){
+					// servlet 작업해주세요.
+				})
+
+				$('#return').click(function(){
+					$(location).attr('href','board_question.html');
+				})				
+			})
+		</script>
 		<!-- Optionally, you can add Slimscroll and FastClick plugins.
 		Both of these plugins are recommended to enhance the
 		user experience. -->
