8. 10 작업내역(2) - 삭제 버튼에 대한 스크립트 작업완료

--- a/view/root/board_question.html
+++ b/view/root/board_question.html
@@ -73,7 +73,7 @@
 							<ul class="treeview-menu">
 								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
 								<li><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
+								<!-- <li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li> -->
 							</ul>
 						</li>
 						<li class="treeview">
@@ -147,17 +147,20 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><input type="checkbox" name="one_select"></td>
+										<!-- 체크값 입력해주세요-->
+										<td><input type="checkbox" name="one_select" value="1"></td>
 										<td><a href="question_detail.html">선택한 날짜에 반찬이 도착하지 않았습니다.</a></td>
 										<td>Administrator</td>
 									</tr>
 									<tr>
-										<td><input type="checkbox" name="one_select"></td>
+										<!-- 체크값 입력해주세요-->
+										<td><input type="checkbox" name="one_select" value="2"></td>
 										<td><a href="question_detail.html">지금 주문하면 언제오나요?</a></td>
 										<td>Administrator</td>
 									</tr>
 									<tr>
-										<td><input type="checkbox" name="one_select"></td>
+										<!-- 체크값 입력해주세요-->
+										<td><input type="checkbox" name="one_select" value="3"></td>
 										<td><a href="question_detail.html">구매취소가 가능한가요?</a></td>
 										<td>Administrator</td>
 									</tr>
