--- a/view/root/board_notice.html
+++ b/view/root/board_notice.html
@@ -73,7 +73,7 @@
 							<ul class="treeview-menu">
 								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
 								<li><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
+								<!-- <li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li> -->
 							</ul>
 						</li>
 						<li class="treeview">
@@ -147,7 +147,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><input type="checkbox" name="one_select"></td>
+										<!-- 체크값 입력해주세요-->
+										<td><input type="checkbox" name="one_select" value="1"></td>
 										<td><a href="notice_detail.html">(공지)안녕하세요. 그랜마찬이 첫인사를 드려요</a></td>
 										<td>Administrator</td>
 									</tr>
