--- a/view/root/question_detail.html
+++ b/view/root/question_detail.html
@@ -74,7 +74,7 @@
 							<ul class="treeview-menu">
 								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
 								<li><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
+								<!-- <li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li> -->
 							</ul>
 						</li>
 						<li class="treeview">
@@ -207,7 +207,9 @@
 				})
 
 				$('#delete').click(function(){
-					// servlet 작업해주세요.
+					if(confirm("현재 게시물을 삭제하시겠습니까?")){
+						// servlet 작업 해주세요.
+					}
 				})
 
 				$('#return').click(function(){
