--- a/view/root/review_mng.html
+++ b/view/root/review_mng.html
@@ -72,7 +72,7 @@
 							<ul class="treeview-menu">
 								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
 								<li><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
+								<!-- <li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li> -->
 							</ul>
 						</li>
 						<li class="treeview">
