--- a/view/root/user_mng_lic.html
+++ b/view/root/user_mng_lic.html
@@ -74,7 +74,7 @@
 							<ul class="treeview-menu">
 								<li><a href="user_mng_cus.html"><i class="fa fa-circle-o"></i>일반사용자</a></li>
 								<li class="active"><a href="user_mng_lic.html"><i class="fa fa-circle-o"></i>사업자</a></li>
-								<li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li>
+								<!-- <li><a href="user_mng_admin.html"><i class="fa fa-circle-o"></i>관리자</a></li> -->
 							</ul>
 						</li>
 						<li class="treeview">
@@ -542,7 +542,7 @@
 		<!-- DataTables -->
 		<script src="../../resources/template/bower_components/datatables.net/js/jquery.dataTables.js"></script>
 		<script src="../../resources/template/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
-		<script src="../../resources/common/js/table_form.js"></script>
+		<script src="../../resources/common/js/table_form2.js"></script>
 		<!-- Select2 -->
 		<script src="../../resources/template/bower_components/select2/dist/js/select2.full.js"></script>
 		<script>
