--- a/resources/common/css/style_item.css
+++ b/resources/common/css/style_item.css
@@ -256,3 +256,21 @@
 		margin-top:30px;
 	}
 }
+
+/* 170812 추가 */
+.table thead tr th{text-align: center;}
+
+.table tbody tr td{
+	vertical-align: middle;
+}
+
+.table tbody tr td:nth-of-type(1),
+.table tbody tr td:nth-of-type(2){
+	text-align: center;
+}
+
+.table thead tr th:nth-of-type(1), .table tbody tr td:nth-of-type(1){width:5%;}
+.table thead tr th:nth-of-type(2), .table tbody tr td:nth-of-type(2){width:10%;}
+.table thead tr th:nth-of-type(3), .table tbody tr td:nth-of-type(3){width:30%;}
+.table thead tr th:nth-of-type(4), .table tbody tr td:nth-of-type(4){width:10%;}
+.table thead tr th:nth-of-type(5), .table tbody tr td:nth-of-type(5){width:10%;}
